# doom-scrollers

./: .gitignore
.github/workflows/: build-agent-client.yml  build-agent-server.yml  build-and-test.yml  build-frontend.yml  lint-backend.yml  lint-frontend.yml  lint.yml  vercel-preview.yml  vercel-prod.yml
agents/client/: Makefile  agent_service.proto  go.mod  go.sum  main.go
agents/server/: Cargo.toml  Dockerfile  Makefile  build.rs  docker-compose.yml  spice.Dockerfile  spicepod.yaml
agents/server/proto/: agent_service.proto
agents/server/src/: server.rs
agents/server/src/handler/: mod.rs  test_agent.rs  types.rs
agents/server/src/services/: openai.rs
backend/: Dockerfile  docker-compose.dev.yml  jest.config.ts  package-lock.json  package.json
backend/__test__/: utils.ts
backend/lib/: misc.ts  session.ts
backend/prisma/: schema.prisma
backend/scripts/: initialize-songs.js
frontend/: .eslintrc.js  app.json  constants.ts  package-lock.json  package.json  tsconfig.json  types.ts
frontend/app/: +not-found.tsx  _layout.tsx  index.tsx
frontend/components/: AccountSettingsModal.tsx  Button.tsx  Collapsible.tsx  CurveTextHeader.tsx  DeviceSelection.tsx  FriendRequestModal.tsx  FriendViewModal.tsx  GenreCard.tsx  GoogleAuthButton.tsx  Header.tsx  HelloWave.tsx  InputField.tsx  ParallaxScrollView.tsx  PlaylistSelectionModal.tsx  SongView.tsx  Spinner.tsx  SpotifyAuthButton.tsx  ThemedText.tsx  ThemedView.tsx  TrackCard.tsx  UserView.tsx
frontend/hooks/: useAuth.ts  useDevices.ts  useFeed.ts  usePlaylist.tsx  useSongs.ts  useSpotify.ts  useTrack.ts
(+88 files in other folders)
