[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
prost = "0.12.4"
tokio = {version = "1.37.0", features = ["full"]}
spiceai = "2.0.0"
async-openai = "0.25.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "agent-server"
path = "src/server.rs"